# faasr-blocks

./: .env.example  .gitignore  LICENSE  QUICKSTART.md  README.md  architectural-considerations.md  pyproject.toml  weather.json
WeatherGeographicPlot/: WeatherGeographicPlotRanked.json
WeatherGeographicPlot/python/: 03_plot_data.py
WeatherVisualization/: WeatherVisualizationConditional.json  WeatherVisualizationDataStores.json
blocks/GetWeatherData/: contract.json
blocks/GetWeatherDataTest/: contract.json
design-docs/: design-docs.md
examples/: discovery_example.py
faasr_blocks/: __init__.py
faasr_blocks/builder/: __init__.py  artifact_parse.py  block_builder.py  block_context.py  cli.py  config.py  debug_log.py  llm.py  models.py  reference_snippets.py  source_generator.py  static_validator.py  test_generator.py  test_runner.py  test_validator.py
faasr_blocks/discovery/: README.md  __init__.py  cli.py  embedding.py  search.py  storage.py
faasr_blocks/models/: __init__.py  contract.py
faasr_blocks/orchestrator/: __init__.py  builder_dispatch.py  cli.py  commands.py  contract_agent.py  discovery_handler.py  repl.py  session.py  summary.py
faasr_blocks/testing/: __init__.py  harness.py  mocks.py
idigbio_media_download/: README.md  idigbio.json
nullstart/: nullstart.json
reference/: README.md
schema/: contract_schema.json
tests/: test_builder.py  test_discovery.py  test_mocks.py  test_orchestrator_cli.py  test_orchestrator_summary.py  test_validators.py
tutorial/: compute_sum.py  tutorialLarger.json  tutorialOW.json  tutorialRpy.json
(+21 files in other folders)
