[project]
name = "faasr-blocks"
version = "0.1.0"
description = "Reusable function blocks for FaaSr workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faasr-py",
    "httpx>=0.27.0",
    "prompt_toolkit>=3.0.0",
    "jsonschema>=4.23.0",
    "pydantic>=2.11.7",
    "pytest>=7.4.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.3",
    "boto3>=1.35.0",
    "sqlite-vec>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "black>=25.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
faasr-blocks-build = "faasr_blocks.builder.cli:main"
faasr-blocks-discover = "faasr_blocks.discovery.cli:main"
faasr-blocks-agent = "faasr_blocks.orchestrator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["faasr_blocks"]

[tool.uv.sources]
# Prefer monorepo checkout; override with git if backend is not present.
faasr-py = { path = "../faasr-backend", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests", "blocks"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
